--- a/index.html
+++ b/index.html
@@ -16,21 +16,8 @@
     <main>
         <div class="task">
             <input type="checkbox" name="isDone" id="isDone">
-            <p>Clean house</p>
-        </div>
-        <div class="task">
-            <input type="checkbox" name="isDone" id="isDone">
-            <p>Order new trousers</p>
-        </div>
-        <div class="task">
-            <input type="checkbox" name="isDone" id="isDone">
-            <p>Develop new website</p>
+            <textarea name="taskText" id="taskText" cols="80" rows="5"></textarea>
         </div>
     </main>
-    <footer>
-        <label for="">Add new task</label>
-        <input type="text" name="newTask" id="newTask">
-        <input type="button" value="Add" onclick="createTask()">
-    </footer>
 </body>
 </html>
